Learn more module css

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,4 +1,5 @@
 html {
+  background-color: rgb(255, 180, 205);
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
