--- a/src/pages/blogs.module.css
+++ b/src/pages/blogs.module.css
@@ -2,13 +2,12 @@
   box-shadow: none;
 }
 h3 {
-  display: inline;
   margin-right: 10px;
   color: #cc964b;
 }
 span {
   color: black;
 }
-h3, span {
+h3 span {
   margin-bottom: 0;
 }
