--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -608,3 +608,14 @@ pre tt:after {
     font-size: 100%;
   }
 }
+
+.flex-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+footer {
+  background: var(--yellow);
+  padding: 10px 2rem;
+}
