--- a/src/components/netlifyForm.module.css
+++ b/src/components/netlifyForm.module.css
@@ -1,8 +1,17 @@
-.form {
+.wrapper {
   background-color: var(--green);
   color: white;
   border-radius: 10px;
   padding: 1rem;
+  margin: 1rem 0;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+h3 {
+  text-align: center;
 }
 .input {
   background: none;
@@ -10,8 +19,9 @@
   border-bottom: 1px solid #fff;
   display: block;
   width: 50%;
-  margin: 0.75rem;
+  margin: 0.75rem 0;
   padding: 0.5rem;
+  color: #f1f1f1;
 }
 .input::placeholder {
   color: #f1f1f1;
