--- a/src/pages/blogs.module.css
+++ b/src/pages/blogs.module.css
@@ -1,10 +1,10 @@
 .title:hover{
   box-shadow: none;
 }
-h3 {
+/* h3 {
   margin-right: 10px;
-  color: #cc964b;
-}
+  
+} */
 span {
   color: black;
 }
