--- a/src/components/netlifyForm.module.css
+++ b/src/components/netlifyForm.module.css
@@ -4,14 +4,12 @@
   border-radius: 10px;
   padding: 1rem;
   margin: 1rem 0;
+  text-align: center;
 }
-form {
+.netForm {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-h3 {
-  text-align: center;
 }
 .input {
   background: none;
